--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,14 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.firebase:firebase-auth:10.0.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
