Added new fragment GroupDashboard 1. Established flow between GroupAddMember and GroupDashboard 2. Added DashboardSwitcherListener for the above 3. Implemented DashboardSwitcherListener in MainActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "sociallockinvite.anything.com.sociallock"
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -28,8 +28,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.0'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.firebase:firebase-auth:10.0.0'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
