--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.0'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
