--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.google.firebase:firebase-messaging:10.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 
