--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.estimote:sdk:0.11.1@aar'
 }
 
 
