Handled all the cases of message passing and some polishing 1. A total of five cases added in Common/Constants 2. Adjusted the DALs to use the five cases above 3. Adjusted FirebaseMessageHandler to handle the five cases above 4. Added logo 5. Polishing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,20 @@
             android:label="@string/title_activity_lock_request"
             android:theme="@style/FullscreenTheme">
         </activity>
+
+        <activity
+            android:name=".View.UnlockRequest"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_lock_request"
+            android:theme="@style/FullscreenTheme">
+        </activity>
+
+        <activity
+            android:name=".View.MemberUnlockRequest"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_lock_request"
+            android:theme="@style/FullscreenTheme">
+        </activity>
     </application>
 
 </manifest>
